chore: improved code, added code docs and added unit test for SolrDeployerService